apps/norish/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: norish
  namespace: traefik
spec:
  entryPoints:
    - frp
  routes:
    - match: Host(`recipes.${DOMAIN}`)
      kind: Rule
      middlewares:
        - name: frp-headers
          namespace: traefik
      services:
        - name: norish
          port: 3000
          namespace: norish
